[package]
name = "logged_tcp_proxy"
version = "0.1.2"
edition = "2021"
authors = ["Alexandr Garbuzov <qwerty541zxc@gmail.com>"]
description = "Command line interface for proxying TCP connections with payload output into console which can be formatted different ways."
keywords = ["network", "tcp", "proxy", "logging", "debugging"]
categories = [
    "command-line-utilities",
    "development-tools::debugging",
    "network-programming"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qwerty541/logged-tcp-proxy"
homepage = "https://github.com/qwerty541/logged-tcp-proxy"
readme = "README.md"
rust-version = "1.74.1"
exclude = [".github", ".vscode", ".gitignore"]

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["std", "derive"] }
env_logger = "0.11.6"
logged-stream = "0.4.0"
log = "0.4.27"
tokio = { version = "1.45.0", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time"
], default-features = false }
