[package]
name = "logged_tcp_proxy"
version = "0.1.2"
edition = "2021"
authors = ["Alexandr Garbuzov <qwerty541zxc@gmail.com>"]
description = "Command line interface for proxying TCP connections with payload output into console which can be formatted different ways."
keywords = ["network", "tcp", "proxy", "logging", "debugging"]
categories = [
    "command-line-utilities",
    "development-tools::debugging",
    "network-programming"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qwerty541/logged-tcp-proxy"
homepage = "https://github.com/qwerty541/logged-tcp-proxy"
readme = "README.md"
rust-version = "1.85.1"
include = ["src/**/*", "Cargo.*", "CHANGELOG.md", "LICENSE-*", "README.md"]

[dependencies]
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["std", "derive"] }
env_logger = "0.11.10"
logged-stream = "0.5.0"
log = "0.4.29"
tokio = { version = "1.51.1", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time"
], default-features = false }
