[package]
name = "logged_tcp_proxy"
version = "0.2.0"
edition = "2024"
authors = ["Alexandr Garbuzov <qwerty541zxc@gmail.com>"]
description = "Command line interface for proxying TCP connections with payload output into console which can be formatted different ways."
keywords = ["network", "tcp", "proxy", "logging", "debugging"]
categories = [
    "command-line-utilities",
    "development-tools::debugging",
    "network-programming"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qwerty541/logged-tcp-proxy"
homepage = "https://github.com/qwerty541/logged-tcp-proxy"
documentation = "https://docs.rs/logged_tcp_proxy"
readme = "README.md"
rust-version = "1.85.1"
include = ["src/**/*", "Cargo.*", "CHANGELOG.md", "LICENSE-*", "README.md"]

[dependencies]
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["std", "derive"] }
env_logger = "0.11.10"
logged-stream = "0.6.0"
log = "0.4.33"
tokio = { version = "1.52.3", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time"
], default-features = false }

[dev-dependencies]
tiny_http = "0.12.0"
tokio-modbus = { version = "0.17.0", default-features = false, features = [
    "tcp",
    "tcp-server"
] }
